# TrajectoryPlanningOnHighways

./: README.md
planning-cpp/: CMakeLists.txt
planning-cpp/src/: CollisionChecker.cpp  CollisionChecker.hpp  Timer.cpp  Timer.h  actions.cpp  actions.hpp  env.hpp  helper.hpp  main.cpp  planner.cpp  planner.hpp  vectors.cpp
trajectoryGeneration/: motion_model.py  trajectoryGenerator.py
trajectoryGeneration/actions_10m_straight/: actions.json
trajectoryGeneration/actions_1m_straight/: actions.json
trajectoryGeneration/actions_5m_straight/: actions.json
